tests/compile_pass/public_headers/export_dot.cpp
#include <pb/export/dot.hpp>

int pb_public_header_export_dot() { return 0; }
